--- a/svmall-order-service/pom.xml
+++ b/svmall-order-service/pom.xml
@@ -3,24 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.main</groupId>
+        <artifactId>sv-mall</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.main</groupId>
-    <artifactId>sv-mall</artifactId>
+    <groupId>com.svmall</groupId>
+    <artifactId>order</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>sv-mall</name>
-    <description>sv-mall</description>
-    <modules>
-        <module>svmall-user-service</module>
-        <module>svmall-recommend-service</module>
-        <module>svmall-order-service</module>
-        <module>svmall-product-service</module>
-        <module>svmall-shopcart-service</module>
-    </modules>
+    <name>svmall-order-service</name>
+    <description>svmall-order-service</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -29,6 +20,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
