--- a/svmall-user-service/pom.xml
+++ b/svmall-user-service/pom.xml
@@ -14,6 +14,11 @@
     <description>svmall-user-service</description>
 
     <dependencies>
+        <dependency>
+            <groupId>com.svmall</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
