--- a/svmall-recommend-service/pom.xml
+++ b/svmall-recommend-service/pom.xml
@@ -13,15 +13,20 @@
 	<name>svmall-recommend-service</name>
 	<description>svmall-recommend-service</description>
 	<dependencies>
+
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<!--java版本，我使用的是12 -->
+					<source>17</source>
+					<target>17</target>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
