--- a/svmall-gateway-user/pom.xml
+++ b/svmall-gateway-user/pom.xml
@@ -14,6 +14,11 @@
     <description>svmall-gateway-user</description>
     <dependencies>
         <dependency>
+            <groupId>com.svmall</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
