--- a/svmall-gateway-admin/src/main/resources/bootstrap.yml
+++ b/svmall-gateway-admin/src/main/resources/bootstrap.yml
@@ -4,13 +4,16 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.0.106:8848
+        server-addr: localhost:8848
         namespace: 29708712-1f65-488e-965a-acd5adea43fe
       config:
-        server-addr: 192.168.0.106:8848
-        file-extension: yml # 此处为配置使用的后缀名
+        server-addr: localhost:8848
+        file-extension: json # 此处为配置使用的后缀名
         group: DEFAULT_GROUP
         namespace: 7e6872ef-3933-499c-a88a-505bc90a4bab # namespace的内容为nacos中配置的gene命名空间的id。
-        prefix: ${spring.application.name}
+    gateway:
+      discovery:
+        locator:
+          enabled: true
 server:
-  port: 9201
+  port: 8810
