--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <mybatis-plus.version>3.3.0</mybatis-plus.version>
         <velocity.version>2.3</velocity.version>
         <!--Swagger Resources-->
-        <knife4j.version>3.0.3</knife4j.version>
+        <knife4j.version>2.0.8</knife4j.version>
         <swagger.version>1.5.21</swagger.version>
         <fastjson.version>1.2.28</fastjson.version>
         <gson.version>2.8.2</gson.version>
@@ -122,8 +122,16 @@
             <version>${hutool.version}</version>
         </dependency>
     </dependencies>
-
     </dependencyManagement>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.swagger/swagger-models -->
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-models</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
