--- a/svmall-shopcart-service/pom.xml
+++ b/svmall-shopcart-service/pom.xml
@@ -13,6 +13,15 @@
     <name>svmall-shopcart-service</name>
     <description>svmall-shopcart-service</description>
     <dependencies>
+        <dependency>
+            <groupId>com.svmall</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+                <dependency>
+                    <groupId>com.github.xiaoymin</groupId>
+                    <artifactId>knife4j-micro-spring-boot-starter</artifactId>
+                </dependency>
     </dependencies>
 
     <build>
@@ -20,10 +29,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <!--java版本，我使用的是12 -->
-                    <source>17</source>
-                    <target>17</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
