--- a/svmall-gateway-admin/pom.xml
+++ b/svmall-gateway-admin/pom.xml
@@ -14,6 +14,10 @@
     <description>svmall-gateway-admin</description>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
         <!--        nacos-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
@@ -39,6 +43,14 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
         </dependency>
     </dependencies>
 
