--- a/svmall-user-service/src/main/resources/application.yml
+++ b/svmall-user-service/src/main/resources/application.yml
@@ -10,5 +10,5 @@ spring:
       discovery:
         server-addr: localhost:8848 # 服务注册中心地址
         namespace: 29708712-1f65-488e-965a-acd5adea43fe
-#        username: nacos
-#        password: nacos
+        username: nacos
+        password: nacos
